WebCore: Fix for https://bugs.webkit.org/show_bug.cgi?id=32346 SVG property -webkit-shadow should apply shadow on the result after compositing -and corresponding- <rdar://problem/7389404>

Reviewed by Oliver Hunt.

Set a transparency layer when setting a shadow to apply the shadow
to the composite.
* rendering/SVGRenderSupport.cpp:
(WebCore::SVGRenderBase::prepareToRenderSVGContent):
(WebCore::SVGRenderBase::finishRenderSVGContent):

LayoutTests: Tests for https://bugs.webkit.org/show_bug.cgi?id=32346 SVG
property -webkit-shadow should apply shadow on the result after
compositing
-and corresponding-
<rdar://problem/7389404>

Reviewed by Oliver Hunt.

New tests:
* platform/mac/svg/css/composite-shadow-example-expected.checksum: Added.
* platform/mac/svg/css/composite-shadow-example-expected.png: Added.
* platform/mac/svg/css/composite-shadow-example-expected.txt: Added.
* platform/mac/svg/css/composite-shadow-with-opacity-expected.checksum: Added.
* platform/mac/svg/css/composite-shadow-with-opacity-expected.png: Added.
* platform/mac/svg/css/composite-shadow-with-opacity-expected.txt: Added.
* svg/css/composite-shadow-example.html: Added.
* svg/css/composite-shadow-with-opacity.html: Added.

New and improved results:
* platform/mac/svg/css/group-with-shadow-expected.checksum:
* platform/mac/svg/css/group-with-shadow-expected.png:



Canonical link: https://commits.webkit.org/43361@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51936 268f45cc-cd09-0410-ab3c-d52691b4dbfc